fixed homepage hero image not displaying correctly on mobile devices

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -10,7 +10,7 @@
     }
 
     .homepage__hero {
-        background: url('http://35.224.88.175/sites/default/files/2018-11/17_444_FABLAB_B%26W.jpg') no-repeat fixed center / cover;
+        background: url('http://35.224.88.175/sites/default/files/2018-11/17_444_FABLAB_B%26W.jpg') no-repeat center center / cover;
         bottom: 0;
         display: block;
         height: 75vh;
